--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     </form>
 
     <div id="saldo" class="text-xl font-semibold mb-4 text-center">Saldo Atual: R$ 0,00</div>
+    <button id="btn-reset" class="bg-red-600 hover:bg-red-700 text-white p-2 rounded mt-2 w-full">
+      Resetar Dashboard
+    </button>
 
     <canvas id="grafico"></canvas>
 
@@ -30,6 +33,8 @@
     const lista = document.getElementById('lista-transacoes');
     const saldoEl = document.getElementById('saldo');
     const ctx = document.getElementById('grafico').getContext('2d');
+    const btnReset = document.getElementById('btn-reset');
+
 
     let transacoes = JSON.parse(localStorage.getItem('transacoes')) || [];
     let grafico = null;
@@ -88,6 +93,13 @@
       form.reset();
       atualizarDashboard();
     });
+    btnReset.addEventListener('click', () => {
+  if (confirm('Tem certeza que quer apagar todas as transações e resetar o dashboard?')) {
+    transacoes = [];
+    localStorage.removeItem('transacoes');
+    atualizarDashboard();
+  }
+});
 
     atualizarDashboard();
   </script>
